third_party/move/move-compiler-v2/tests/op-equal/invalid0.exp

Diagnostics:
error: cannot mutably borrow from an immutable ref
   ┌─ tests/op-equal/invalid0.move:15:3
   │
15 │         self.0 += 1;
   │         ^^^^^^

error: expected `&mut` but `&` was provided
   ┌─ tests/op-equal/invalid0.move:27:3
   │
27 │         x[index] += 1;
   │         ^

error: expected `&mut` but `&` was provided
   ┌─ tests/op-equal/invalid0.move:31:3
   │
31 │         x[index].0.0 += 1;
   │         ^
